# cfgaa22-Wantcha

./: .gitignore  CMakeLists.txt  README.md
.qtc_clangd/: compile_commands.json
.qtc_clangd/.cache/clangd/index/: GL.h.3A94BA6C2F90115D.idx  NGLScene.cpp.FA47B71201EF83AE.idx  NGLScene.h.EDC9936D0C9E2F8E.idx  OAIdl.h.D72CB8A3EDA5E20B.idx  ObjIdl.h.5885A8A8B9B5206D.idx  ObjIdlbase.h.90C1AACA85579A5A.idx  Ole2.h.BFD85D1267A9709F.idx  OleAuto.h.C435B1F7AB8A499E.idx  PropIdl.h.652502060EEC8CB7.idx  PropIdlBase.h.68EC2B39CC4ECD84.idx  QObject.B5BB8A4B394FA2DA.idx  QOpenGLWindow.9ADDC84FD79DE160.idx  QPaintDevice.85E24C45C111FF9B.idx  QPaintDeviceWindow.99F2CF9F444E33E2.idx  QSurfaceFormat.1E15C0BCD1343865.idx  QWindow.035CFCF8C2A402C4.idx  Unknwn.h.61981605C64B2E9B.idx  Unknwnbase.h.DA72EB3D46345D08.idx  WTypesbase.h.A625D445D6FB713A.idx  WinBase.h.3913E1158BFE2FBE.idx  WinNls.h.29969097B8FBC13C.idx  WinUser.h.389DB3F063C9C5D8.idx  WindowParams.h.8C6D0CF125E0DB19.idx  Windows.h.C67820829644EC49.idx  __msvc_system_error_abi.hpp.F2FBC707A8ECD7A2.idx  algorithm.6E55331418C64348.idx  apiquery2.h.C8A8A003BFB87997.idx  apiset.h.9612CC0D8C45E50C.idx  apisetcconv.h.07856DFF28BDC357.idx  assert.h.EC997DDDD94568AB.idx  atomic.71B9DB8AF4F43130.idx  basetsd.h.881C8A83DFB3322C.idx  bcrypt.h.78DEBE529E16EE43.idx  cctype.7FF4DA8C0C00BD04.idx  cderr.h.FB9A7D68D223038B.idx  cerrno.25CEDCC2064843D4.idx  cfloat.36B0D313976AC9B8.idx  cguid.h.4E19630A678F8E96.idx  chrono.600FDA446022CD2C.idx  climits.A07A0C01F69B0993.idx  (+297 more)
Sample Projects/Project1/: basicscene.lol  test.lol
Sample Projects/Project2/: project2.lol
include/: Camera.h  ColorPicker.h  EnvironmentTexture.h  FrameBuffer.h  Gizmos.h  Lights.h  MainWindow.h  Mesh.h  MeshObject.h  NGLScene.h  ObjMesh.h  PBRShaderManager.h  RenderDialog.h  SceneObject.h  SceneSerializer.h  TextureWidget.h  Transform.h  WindowParams.h
include/Assets/: Asset.h  AssetCache.h  AssetManager.h
meshes/: yuri.mtl
shaders/: BRDFFrag.glsl  BasicFrag.glsl  BasicVert.glsl  ConvoluteCubeMapFrag.glsl  HDRToCubeFrag.glsl  HDRToCubeVert.glsl  LinearDepthFrag.glsl  LinearDepthGeo.glsl  LinearDepthVert.glsl  PBRFrag.glsl  PBRVert.glsl  PrefilterHDRFrag.glsl  SimpleDepthVert.glsl  SimpleTextureFrag.glsl  SimpleTextureVert.glsl  SkyboxFrag.glsl  SkyboxVert.glsl  StencilColorFrag.glsl  StencilColorVert.glsl  UnlitFrag.glsl  UnlitVert.glsl
src/: AssetManager.cpp  Camera.cpp  ColorPicker.cpp  EnvironmentTexture.cpp  FrameBuffer.cpp  Gizmos.cpp  Lights.cpp  MainWindow.cpp  Mesh.cpp  MeshObject.cpp  NGLScene.cpp  NGLSceneMouseControls.cpp  ObjMesh.cpp  PBRShaderManager.cpp  RenderDialog.cpp  SceneObject.cpp  SceneSerializer.cpp  TextureWidget.cpp  Transform.cpp  main.cpp
ui/: MainWindow.ui  NGLScene.ui  palette.xml
